--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -1,3 +1,4 @@
+
 .App {
   text-align: center;
 }
@@ -30,4 +31,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.btn-container {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.app-container {
+  height: 100vh;
+  display: flex;
+  flex-flow: column;
 }
