Added styles to splash page and moved navigation to header

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -38,6 +38,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: url('../../Images/main-bg.png');
+  background-size: cover;
+  background-position: center;
+}
+
+.no-bg {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .app-container {
