--- a/src/Containers/CardContainer/CardContainer.scss
+++ b/src/Containers/CardContainer/CardContainer.scss
@@ -5,9 +5,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  margin-bottom: 50px;
 }
 
 .movie-card {
+  height: 450px;
   max-width: 45%;
   min-width: 45%;
   margin: 10px;
@@ -21,14 +23,21 @@
   border: 1px solid $primary-color;
 }
 
+.movie-card:hover{
+  box-shadow: 3px 10px 15px 2px rgba(204,204,204,1);
+
+}
+
 .movie-title {
   grid-area: title;
   text-align: center;
 }
 
 .movie-poster {
+  padding: 10px;
   grid-area: poster;
-  height: 400px;
+  height: 430px;
+  width: 290px;
 }
 
 .movie-overview {
