--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -55,3 +55,14 @@
   display: flex;
   flex-flow: column;
 }
+
+.search-bar{
+  display: flex;
+  justify-content: center;
+}
+
+.search-bar input{
+  margin-top: 5px;
+  width: 500px;
+  height: 35px;
+}
