Added a popup if no favorites or not logged in

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -8,6 +8,8 @@ img {
   background: $primary-color;
   display: flex;
   justify-content: space-between;
+  width: 100%;
+  position: fixed;
 }
 
 .logo {
