--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -41,6 +41,7 @@
   background-image: url('../../Images/main-bg.png');
   background-size: cover;
   background-position: center;
+  margin-top: 150px;
 }
 
 .no-bg {
