--- a/src/Containers/NoFavorites/NoFavorites.scss
+++ b/src/Containers/NoFavorites/NoFavorites.scss
@@ -24,7 +24,7 @@
   text-decoration: none;
   color: $main-text;
   padding: 15px 30px;
-  border-radius: 
+  border-radius: 3px;
 }
 
 .button-container {
