--- a/src/Containers/AddUser/AddUser.scss
+++ b/src/Containers/AddUser/AddUser.scss
@@ -17,3 +17,18 @@
     margin: 5px 10px;
   }
 }
+
+.success-message {
+  border: 1px solid $primary-color;
+  padding: 15px;
+  text-align: center;
+  color: $primary-color;
+  background: $primary-color;
+  margin-top: 10px; 
+  color: $main-background;
+  text-decoration: none;
+
+  &:hover {
+    background: $primary-hover;
+  }
+}
