--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -99,3 +99,27 @@
   margin: auto;
   margin-top: 5px;
 }
+
+.movie-details{
+  display: grid;
+  grid-template-columns: 900px 1fr;
+  background-color: #86add3;
+  width: 100%;
+  height: 100%;
+  /*margin:50px;*/
+
+}
+
+.movie-grid{
+  display: inline;
+  background-color: white;
+  width: 800px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 60px;
+  margin: 50px;
+  text-align: justify-all;
+}
+
+.back-button{
+  margin-top: 200px;
+}
