--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -98,15 +98,16 @@
   font-size: 22px;
   margin: auto;
   margin-top: 5px;
+  background-color: #d38787;
+
 }
 
 .movie-details{
   display: grid;
   grid-template-columns: 900px 1fr;
-  background-color: #86add3;
+  background-color: gainsboro;
   width: 100%;
   height: 100%;
-  /*margin:50px;*/
 
 }
 
@@ -127,4 +128,17 @@
 .movie-buttons{
   margin: 20px;
   height: 40px
+}
+
+.search-input{
+  width: 400px;
+  height: 30px;
+  margin: 20px;
+  margin-left: 25%
+}
+
+.search-button{
+  height: 35px;
+  width: 70px;
+  background-color: #d38787;
 }
