--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -104,7 +104,7 @@
 
 .movie-details{
   display: grid;
-  grid-template-columns: 900px 1fr;
+  grid-template-columns: 1200px 1fr;
   background-color: gainsboro;
   width: 100%;
   height: 100%;
@@ -114,9 +114,9 @@
 .movie-grid{
   display: inline;
   background-color: white;
-  width: 800px;
+  width: 1050px;
   display: grid;
-  grid-template-columns: 1fr 1fr 60px;
+  grid-template-columns: 1fr 400px 60px;
   margin: 50px;
   text-align: justify-all;
 }
@@ -141,4 +141,15 @@
   height: 35px;
   width: 70px;
   background-color: #d38787;
+}
+
+.alt-poster{
+  margin:20px;
+  margin-top: 40px;
+  width: 90%;
+  height: 65%
+}
+
+.detail-text{
+  margin-top: 30px;
 }
