--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -37,7 +37,7 @@
   }
 }
 
-.btn-container {
+.user-actions {
   flex-grow: 1;
   display: flex;
   align-items: center;
@@ -91,37 +91,11 @@
   float:right;
 }
 
-.drop-down{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #595959;
-  border-right: 0;
-  text-decoration: none;
-  color: #595959;
-  font-size: 22px;
-  margin: auto;
-  margin-top: 5px;
-  background-color: #d38787;
-}
-
 .movie-buttons{
   margin: 20px;
   height: 40px
 }
 
-.search-input{
-  width: 400px;
-  height: 30px;
-  margin: 20px;
-  margin-left: 25%
-}
-
-.search-button{
-  height: 35px;
-  width: 70px;
-  background-color: #d38787;
-}
 
 
 
