--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -30,3 +30,14 @@
 .password {
   grid-area: password;
 }
+
+.btn-container {
+  height: 85vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url('../../Images/main-bg.png');
+  background-size: cover;
+  background-position: center;
+}
