--- a/src/Containers/Favorites/Favorites.scss
+++ b/src/Containers/Favorites/Favorites.scss
@@ -1,10 +1,8 @@
-@import '../../Utilities/_Variables.scss';
 
 
-.card-container {
+.fav-scroll{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   overflow-y: auto;
-  height: 85vh;
 }
