--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -1,3 +1,4 @@
+@import '../../Utilities/_Variables.scss';
 
 .App {
   text-align: center;
@@ -7,10 +8,6 @@
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
-}
-
-.app-container {
-  overflow: hidden;
 }
 
 .App-header {
@@ -59,6 +56,7 @@
   height: 100vh;
   display: flex;
   flex-flow: column;
+  background-color: $main-background;
 }
 
 .search-bar{
