--- a/src/Components/Filter/Filter.scss
+++ b/src/Components/Filter/Filter.scss
@@ -8,7 +8,7 @@
   color: #595959;
   font-size: 22px;
   background-color: #d38787;
-  margin: 0 auto;
+  margin: 0;
 }
 
 
@@ -31,5 +31,7 @@
 
 .filter-bar {
   display: flex;
+  justify-content: space-around;
   align-items: center;
+  margin: 20px auto;
 }
