fix clear button

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -141,7 +141,11 @@
   width: 70px;
   background-color: #d38787;
 }
-
+.clear-button{
+  height: 35px;
+  width: 120px;
+  background-color: #d38787;
+}
 .alt-poster{
   margin:20px;
   margin-top: 40px;
