fix search button

--- a/src/Containers/CardContainer/CardContainer.scss
+++ b/src/Containers/CardContainer/CardContainer.scss
@@ -45,3 +45,33 @@
   grid-area: overview;
   margin: 0 10px;
 }
+
+.search-bar{
+  display: flex;
+  justify-content: center;
+}
+
+.search-bar input{
+  margin-top: 5px;
+  width: 500px;
+  height: 35px;
+}
+
+.page{
+  width: 150px;
+  background: #d38787;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #595959;
+  border-right: 0;
+  text-decoration: none;
+  color: #595959;
+  font-size: 22px;
+  display: inline;
+  margin: 5px;
+}
+
+.next{
+  float:right;
+}
