--- a/src/Components/Filter/Filter.scss
+++ b/src/Components/Filter/Filter.scss
@@ -8,7 +8,7 @@
   color: #595959;
   font-size: 22px;
   background-color: #d38787;
-  margin: 0;
+  margin: 10px auto;
 }
 
 
@@ -26,12 +26,13 @@
   height: 35px;
   width: 70px;
   background-color: #d38787;
+  color: $main-text;
 }
 
 
 .filter-bar {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
   align-items: center;
   margin: 20px auto;
 }
