--- a/src/Containers/App/App.scss
+++ b/src/Containers/App/App.scss
@@ -1,4 +1,4 @@
-@import '../../Utilities/_Variables.scss';
+@import "../../Utilities/_Variables.scss";
 
 .App {
   text-align: center;
@@ -39,7 +39,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-image: url('../../Images/main-bg.png');
+  background-image: url("../../Images/main-bg.png");
   background-size: cover;
   background-position: center;
   margin-top: 150px;
@@ -60,18 +60,18 @@
   overflow: hidden;
 }
 
-.search-bar{
+.search-bar {
   display: flex;
   justify-content: center;
 }
 
-.search-bar input{
+.search-bar input {
   margin-top: 5px;
   width: 500px;
   height: 35px;
 }
 
-.page{
+.page {
   width: 150px;
   background: #d38787;
   display: flex;
@@ -86,15 +86,11 @@
   margin: 5px;
 }
 
-.next{
-  float:right;
+.next {
+  float: right;
 }
 
-.movie-buttons{
+.movie-buttons {
   margin: 20px;
-  height: 40px
+  height: 40px;
 }
-
-
-
-
