--- a/src/Containers/Favorites/Favorites.scss
+++ b/src/Containers/Favorites/Favorites.scss
@@ -1,7 +1,6 @@
-@import '../../Utilities/_Variables.scss';
+@import "../../Utilities/_Variables.scss";
 
-
-.fav-scroll{
+.fav-scroll {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
