--- a/src/Components/Filter/Filter.scss
+++ b/src/Components/Filter/Filter.scss
@@ -1,6 +1,6 @@
-@import '../../Utilities/_Variables.scss';
+@import "../../Utilities/_Variables.scss";
 
-.drop-down{
+.drop-down {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,24 +11,22 @@
   margin: 10px auto;
 }
 
-
 .search {
   display: flex;
   align-items: center;
 }
 
-.search-input{
+.search-input {
   width: 400px;
   height: 30px;
 }
 
-.search-button{
+.search-button {
   height: 35px;
   width: 70px;
   background-color: #d38787;
   color: $main-text;
 }
-
 
 .filter-bar {
   display: flex;
