--- a/src/Containers/MovieCard/MovieCard.scss
+++ b/src/Containers/MovieCard/MovieCard.scss
@@ -1,9 +1,9 @@
-@import '../../Utilities/_Variables.scss';
+@import "../../Utilities/_Variables.scss";
 
 .movie-card {
   width: 35%;
   margin: 10px;
-  background: rgba(211, 135, 135, .7);
+  background: rgba(211, 135, 135, 0.7);
   display: flex;
   padding: 20px;
   & img {
@@ -12,16 +12,13 @@
   }
 }
 
-.movie-card:hover{
-  box-shadow: 3px 10px 15px 2px rgba(204,204,204,1);
-
+.movie-card:hover {
+  box-shadow: 3px 10px 15px 2px rgba(204, 204, 204, 1);
 }
 
 .movie-title {
   text-align: center;
 }
-
-
 
 .movie-poster {
   width: 100%;
