--- a/src/Containers/NoFavorites/NoFavorites.scss
+++ b/src/Containers/NoFavorites/NoFavorites.scss
@@ -1,16 +1,16 @@
-@import '../../Utilities/_Variables.scss';
+@import "../../Utilities/_Variables.scss";
 
 .overlay {
   height: 100vh;
   width: 100vw;
-  background: rgba(0, 0, 0, .5);
+  background: rgba(0, 0, 0, 0.5);
   position: fixed;
   display: flex;
   justify-content: center;
 }
 
 .popup {
-  margin-top: 150px; 
+  margin-top: 150px;
   width: 30%;
   height: 30%;
   background: $main-background;
